# CLD

./: .gitignore  CLAUDE.md  CLD.spec  LICENSE  README.md  build.md  build_now.bat  compress_upx.ps1  compress_upx_dist2.ps1  hook-pywhispercpp.py  installer.iss  publish-to-public.ps1  pyi_rth_numpy.py  pyi_rth_pywhispercpp.py  pyi_rth_tcltk.py  pyproject.toml  run_build.bat  sign-exe.ps1  sign-installer.ps1  sync-public.ps1
build-scripts/: build_vulkan_direct.bat  build_vulkan_no_repair.bat  build_vulkan_py312.bat  build_vulkan_short_path.bat
build-scripts/patches/: gpu_device_selection.patch
docs/: audio-gpu-implementation-plan.md  audio-spectrum-visualization.md  build-and-release-plan.md  build.md  cld-ui-enhancement-plan.md  git-license-plan.md  lessons-learned.md  migration-plan.md  original-plugin-analysis.md  ui-improvements-plan.md  universal-gpu-support-vulkan-implementation-plan.md  windows-tray-app-patterns.md
pywhispercpp-src/pywhispercpp/: model.py
pywhispercpp-src/src/: main.cpp
sounds/: SOURCES.md
src/cld/: __init__.py  cli.py  config.py  daemon.py  daemon_service.py  engine_factory.py  errors.py  hotkey.py  keyboard.py  model_manager.py  recorder.py  setup.py  sounds.py  window.py
src/cld/engines/: whisper.py
src/cld/ui/: __init__.py  hardware.py  key_scanner.py  model_dialog.py  overlay.py  settings_dialog.py  settings_popup.py  tray.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_engine_factory.py  test_hotkey.py  test_keyboard.py  test_model_manager.py
