[project]
name = "cld2"
version = "0.1.0"
description = "CLD2 - Windows GUI speech-to-text with pywhispercpp backend, overlay UI and system tray integration"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "MarvinFS" }
]
keywords = ["whisper", "speech-to-text", "stt", "voice", "dictation", "windows", "gui", "pywhispercpp"]

dependencies = [
    "sounddevice>=0.4",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "numpy>=1.24",
    "keyboard>=0.13",
    "pystray>=0.19",
    "pillow>=9.0",
    "pywhispercpp>=1.4",
]

[project.optional-dependencies]
windows = ["pywin32"]
dev = ["pytest", "ruff", "nuitka>=2.0", "pyinstaller>=6.0"]

[project.scripts]
cld2 = "cld.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cld"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# cli.py has intentional late imports (after early debug check)
"src/cld/cli.py" = ["E402"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
