[project]
name = "claudecli-dictate"
version = "0.5.2"
description = "ClaudeCli-Dictate (CLD) - Windows GUI speech-to-text with pywhispercpp backend, overlay UI and system tray integration"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "MarvinFS" }
]
keywords = ["whisper", "speech-to-text", "stt", "voice", "dictation", "windows", "gui", "pywhispercpp"]

dependencies = [
    "sounddevice>=0.4",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "numpy>=1.24",
    "keyboard>=0.13",
    "pystray>=0.19",
    "pillow>=9.0",
    "pywhispercpp>=1.4",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyinstaller>=6.0"]

[project.scripts]
cld = "cld.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cld"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# cli.py has intentional late imports (after early debug check)
"src/cld/cli.py" = ["E402"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
